--- a/src/app/pages/public/sendmessage/sendmessage.page.html
+++ b/src/app/pages/public/sendmessage/sendmessage.page.html
@@ -2,10 +2,8 @@
     <div class="row" style="overflow:auto;height:100%">
         <div class="columnHome"></div>
         <div class="columnHome">
-            <p><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 2px" (click)="sendmoney()">
-                &nbsp;
-                <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet_Pro" >Send Message</p>
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 2px" (click)="sendmoney()">
+                &nbsp;Send Message</p>
             <p style="float: right;">
                 <button  class="history" (click)="getHistory()">History</button>&nbsp;
                 <button class="send" (click)="sendMessage()" style="visibility: hidden !important">Send Message</button>
