--- a/src/app/pages/public/sendmoney/preview/preview.page.html
+++ b/src/app/pages/public/sendmoney/preview/preview.page.html
@@ -6,9 +6,16 @@
                     (click)="home()">
                 &nbsp;
                 <span>Send Money to Eric Thomson</span></p>
-            <p style="text-align: center;">
+            <!-- <p style="text-align: center;">
                 <img src="assets/Group 3_78.png">
-            </p>
+            </p> -->
+            <div style="text-align: -webkit-center;">
+                    <div class="trans_1">
+                        <p class="insideRound">ET</p>
+                    </div>
+                </div>
+                &nbsp;&nbsp;<label class="tdLabelConf" style="float:right;padding-right: 20px;">Edit</label><img style="float:right" src="assets/edit.png">
+                <br>
             <table style="width: 100%;padding-left: 10px; padding-right: 10px;">
                 <tr (click)="transmission()">
                     <td class="transmission" style="text-align: left !important">
