--- a/src/app/pages/public/settings/profile/profile.page.html
+++ b/src/app/pages/public/settings/profile/profile.page.html
@@ -2,11 +2,10 @@
         <div class="row" style="overflow:auto;height:100%">
           <div class="columnHome"></div>
           <div class="columnHome" >
-            <p><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px"
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px"
                 (click)="settings()">
               &nbsp;
-              <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet_Pro">Profile</p>
+              <span style="text-align: center">Profile</span></p>
          <div style="text-align:center;">
                 <table class="tb1">
                         <tr>
