--- a/src/app/pages/public/settings/settings.page.html
+++ b/src/app/pages/public/settings/settings.page.html
@@ -2,11 +2,9 @@
   <div class="row" style="overflow:auto;height:100%">
     <div class="columnHome"></div>
     <div class="columnHome">
-      <p><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px"
+      <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px"
           (click)="home()">
-        &nbsp;
-        <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-      <p class="otherSet_Pro">Settings</p>
+        &nbsp;Settings</p>
     <table style="width:100%;padding-left:25px;padding-right:25px;">
       <tr>
         <td style="width:20%"><span><img src="assets/info.png" /></span> </td>
