--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -21,9 +21,9 @@
                         <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
                                 align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
                     </div>
-            <p><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px">
+            <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px">
                 &nbsp;
-                <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
+                Transactions</p>
             
             <p style="float: right;">
                 <button id="7day" class="day7" (click)="click7days()">7 Days</button>&nbsp;
