--- a/src/app/pages/public/managewallet/walletadd/walletadd.page.html
+++ b/src/app/pages/public/managewallet/walletadd/walletadd.page.html
@@ -12,10 +12,8 @@
     <div class="row" style="overflow:auto;height:100%">
         <div class="columnHome"></div>
         <div class="columnHome">
-            <p><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="wallet()">
-                &nbsp;
-                <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet_Pro">Wallet</p>
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="wallet()">
+                &nbsp;Wallet</p>
             <div class="clear"></div>
             <p class="head1" style="font-family: raleway_medium, Arial !important">Please fill in the required details
             </p>
