--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@
 }
 .lal {
     position: relative;
-    right: 38%;
+    right: 36%;
     top: -30%;
     color: white;
     font-size: 15px;
@@ -49,7 +49,7 @@
 }
 .lalFirst {
     position: relative;
-    right: 38%;
+    right: 36%;
     top: -30%;
     color: white;
     font-size: 15px;
@@ -257,6 +257,17 @@ and (max-device-width : 320px) and (orientation:portrait){
     border: none;
     opacity: 1;
     margin-left: -20px !important;}
+.pincode{
+    text-align: center;
+    line-height: 28.00px;
+    letter-spacing: -0.00px;
+    color: rgba(83, 74, 43, 1);
+    font-size: 20.00px;
+    font-weight: 400;
+    font-style: normal;
+    font-family: raleway_regular, Arial;
+    opacity:0.5;
+}
 .sendMoneyDiv{margin-left:10px;margin-top: 15px;margin-right:10px;bottom:10px;border:1px solid lightgray;padding-top: 3px;height: 30pc;}
 .notesVerify{font-size: 16.00px;
     font-weight: 400;  
@@ -405,12 +416,13 @@ option:hover{
 input[type="text"]
 {
     background: transparent;
-    border-bottom: 1px solid #aa822a;
+    border-bottom: 1px solid rgba(60, 60, 60, 1);
     border-right:none;
     border-left:none;
     border-top: none;
     font-size: 20.00px;
     line-height: 28.00px;
+    width: 85%;
     color: rgba(83, 74, 43, 1);
     font-weight: 400;
     font-style: normal;
