--- a/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
+++ b/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
@@ -140,7 +140,7 @@
             </div>
             <div style="text-align: center;margin-top: 30px;">
                 <button  class="nextbtn !important"style="width: 135.00px;height: 40.12px !important"(click)="onClickSend()">Send Again</button>&nbsp;&nbsp;
-                <button  class="nextbtn !important" (click)="sendmessage()" style="color:rgba(41, 39, 36, 1);width: 155.00px;height: 40.12px;background-color: rgba(255, 195, 63, 1) !important" (click)="onClickSend()">Send Message</button>
+                <button  class="nextbtn !important"  style="color:rgba(41, 39, 36, 1);width: 155.00px;height: 40.12px;background-color: rgba(255, 195, 63, 1) !important" (click)="onClickMsg()">Send Message</button>
             </div>
         </div>
         <div class="columnHome"></div>
