--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -21,7 +21,7 @@
                 &nbsp;
                 <span>Send Money to Eric Thomson</span></p>
             <p style="text-align: center;">
-                <img src="assets/receiver.png" (click)="receiver()">
+                <img src="assets/Receiver Profile.png" (click)="receiver()">
                 <span class="receiver" (click)="receiver()">Receiver Info</span>
             </p>
             <div class="sendMoneyDiv" *ngIf="receiverInfo">
