--- a/src/styles.css
+++ b/src/styles.css
@@ -243,10 +243,11 @@ and (max-device-width : 320px) and (orientation:portrait){
     opacity: 1;
     text-align: center;
 }
+
 .sendmoneyBtn{   
-    position: relative;     
+    position: absolute;     
     height: 36.5px;
-    width: auto;
+    width: 100px;
     border-radius: 10px;
     background-color: rgba(60, 60, 60, 1);
     color: rgba(255, 255, 255, 1);
@@ -256,7 +257,29 @@ and (max-device-width : 320px) and (orientation:portrait){
     font-family: raleway_medium, Arial;
     border: none;
     opacity: 1;
+    margin-top: -25px;
     margin-left: -20px !important;}
+.sendmoneyBtn1{   
+    position: absolute;     
+    height: 36.5px;
+    width: 100px;
+    border-radius: 10px;
+    background-color: rgba(60, 60, 60, 1);
+    color: rgba(255, 255, 255, 1);
+    font-size: 24.00px;
+    font-weight: 500;
+    font-style: normal;
+    font-family: raleway_medium, Arial;
+    border: none;
+    opacity: 1;
+    margin-top: -2px;
+    margin-left: -20px !important;
+}
+@-moz-document url-prefix() {
+    .sendmoneyBtn,.sendmoneyBtn1{   
+    margin-top:0px  !important;
+    }
+  }
 .pincode{
     text-align: center;
     line-height: 28.00px;
@@ -268,7 +291,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     font-family: raleway_regular, Arial;
     opacity:0.5;
 }
-.sendMoneyDiv{margin-left:10px;margin-top: 15px;margin-right:10px;bottom:10px;border:1px solid lightgray;padding-top: 3px;height: 30pc;}
+.sendMoneyDiv{margin-left:10px;margin-top: 15px;margin-right:10px;bottom:10px;border:1px solid lightgray;padding-top: 3px;height: auto;}
 .notesVerify{font-size: 16.00px;
     font-weight: 400;  
       color: rgba(83, 74, 43, 1);
