--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -269,7 +269,7 @@
                                     </tr>
                                 </table>
                                 <div style="text-align: center;margin-top: 10px;">
-                                <button  *ngIf="firstPage" class="nextbtn !important" style="width: 125.00px;height: 40.12px !important" (click)="onPreviewClick()">Preview</button>
+                                <button  *ngIf="firstPage" class="nextbtn !important" style="width: 125.00px;height: 40.12px ;margin-bottom: 10px !important" (click)="onPreviewClick()">Preview</button>
                                 </div>
                             </div>
                         </form>
