--- a/src/app/pages/public/managewallet/managewallet.page.html
+++ b/src/app/pages/public/managewallet/managewallet.page.html
@@ -1,13 +1,13 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px"
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;"
                     (click)="home()">
                 &nbsp;            Wallet</p>
             <p style="float: left;">
                 <button style="cursor: pointer;color: rgba(60, 60, 60, 1);font-size: 16px;border-radius: 55px;    opacity: 1;width: 162.00px;height: 52.00px;background-color: rgba(255, 195, 63, 1);"
-                    (click)="addwallet()"><img src="assets/add.png" alt="" style="padding-left:5px;position: absolute;left: 16px;top: 132px;">&nbsp;<span
+                    (click)="addwallet()"><img src="assets/add.png" alt="" style="padding-left:5px;position: absolute;left: 16px;top: 135px;">&nbsp;<span
                         class="addAcc">Add Account</span></button>&nbsp;
             </p>
             <br>
@@ -84,6 +84,6 @@
                 </div>
             </div>
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
