--- a/src/app/pages/public/sendmoney/preview/preview.page.html
+++ b/src/app/pages/public/sendmoney/preview/preview.page.html
@@ -1,20 +1,17 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 2px"
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer; "
                     (click)="home()">
                 &nbsp;
                 <span>Send Money to Eric Thomson</span></p>
-            <!-- <p style="text-align: center;">
-                <img src="assets/Group 3_78.png">
-            </p> -->
-            <div style="text-align: -webkit-center;">
+                <div style="text-align: -webkit-center;">
                     <div class="trans_1">
                         <p class="insideRound">ET</p>
                     </div>
                 </div>
-                &nbsp;&nbsp;<label class="tdLabelConf" style="float:right;padding-right: 20px;">Edit</label><img style="float:right" src="assets/edit.png">
+                &nbsp;&nbsp;<label class="tdLabelConf" style="float:right;padding-right: 20px;">&nbsp;&nbsp;Edit</label><img style="float:right" src="assets/edit.png">
                 <br>
             <table style="width: 100%;padding-left: 10px; padding-right: 10px;">
                 <tr (click)="transmission()">
@@ -133,6 +130,6 @@
 
 
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
