--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -1,6 +1,6 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
             <div id="mySidenav" class="sidenav" *ngIf="openNavBar">
                 <span style="margin-top:10px;"><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18"
@@ -21,25 +21,6 @@
                 <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
                         align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
             </div>
-            <!-- <div id="mySidenav" class="sidenav" style="position: absolute;">
-                <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                        (click)="home()"><label class="margin20" (click)="home()">Home</label></span>
-                <hr class="hr">
-                <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                        (click)="sendMoney()"><label class="margin20" (click)="sendMoney()">Send Money</label></span>
-                <hr class="hr">
-                <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                        (click)="transaction()"><label class="margin20" (click)="transaction()">Transactions</label></span>
-                <hr class="hr">
-                <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                        (click)="wallet()"><label class="margin20" (click)="wallet()">Manage Wallet</label></span>
-                <hr class="hr">
-                <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"><label
-                        class="margin20" (click)="settings()">Settings</label></span>
-                <hr class="hr">
-                <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
-                        align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
-            </div> -->
             <p><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px;">
                 &nbsp;
                 <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
@@ -50,7 +31,7 @@
             <p style="float: right;cursor: pointer;">
                 <span><img src="assets/yellow-grid.png" id="grid" alt="" align="top" (click)="gridViewFunc()"> &nbsp;</span>
             </p>
-
+            <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
             <div class="wrapper" id="column" *ngIf="gridView" style="opacity:1">
                 <div style="margin: auto;text-align: right;">
@@ -133,6 +114,6 @@
                 </div>
             </div>
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
