--- a/src/app/pages/public/managewallet/walletadd/walletadd.page.html
+++ b/src/app/pages/public/managewallet/walletadd/walletadd.page.html
@@ -10,9 +10,9 @@
 </style>
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="wallet()">
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer" (click)="wallet()">
                 &nbsp;Wallet</p>
             <div class="clear"></div>
             <p class="head1" style="font-family: raleway_medium, Arial !important">Please fill in the required details
@@ -103,6 +103,6 @@
             </div>
 
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
