--- a/src/app/pages/public/sendmessage/sendmessage.page.html
+++ b/src/app/pages/public/sendmessage/sendmessage.page.html
@@ -1,8 +1,8 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 2px" (click)="sendmoney()">
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;" (click)="sendmoney()">
                 &nbsp;Send Message</p>
             <p style="float: right;">
                 <button  class="history" (click)="getHistory()">History</button>&nbsp;
@@ -51,6 +51,6 @@
                 <button  class="nextbtn !important" (click)="onClickSend()">Send</button>
             </div>
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
