--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -14,9 +14,9 @@
         </style>
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 2px"
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;"
                     (click)="home()">
                 &nbsp;
                 <span>Send Money to Eric Thomson</span></p>
@@ -276,6 +276,6 @@
             </div>
            
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
