--- a/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
+++ b/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
@@ -1,6 +1,6 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
                 <div id="mySidenav" class="sidenav" *ngIf="openNavBar">
                         <span style="margin-top:10px;"><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18"
@@ -40,7 +40,7 @@
                 <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18"  (click)="settings()" align="top" (click)="logOut()"><label
                         class="margin20" (click)="logOut()">Logout</label></span>
                     </div> -->
-            <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="openNav()">
+            <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" style="cursor: pointer;padding-top: 3px;" (click)="openNav()">
                 &nbsp;
                 Transaction Details</p>
             <p class="head1" style="text-align: center;">Your transaction is successful .</p>
@@ -139,10 +139,10 @@
                 </table>
             </div>
             <div style="text-align: center;margin-top: 30px;">
-                <button  class="nextbtn !important"style="width: 135.00px;height: 40.12px !important"(click)="onClickSend()">Send Again</button>&nbsp;&nbsp;
-                <button  class="nextbtn !important"  style="color:rgba(41, 39, 36, 1);width: 155.00px;height: 40.12px;background-color: rgba(255, 195, 63, 1) !important" (click)="onClickMsg()">Send Message</button>
+                <button  class="nextbtn !important"style="width: auto;height: 40.12px;display: inline-block !important"(click)="onClickSend()">Send Again</button>&nbsp;&nbsp;
+                <button  class="nextbtn !important"  style="display: inline-block;color:rgba(41, 39, 36, 1);width: auto;height: 40.12px;background-color: rgba(255, 195, 63, 1) !important" (click)="onClickMsg()">Send Message</button>
             </div>
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
