--- a/src/app/pages/public/settings/settings.page.html
+++ b/src/app/pages/public/settings/settings.page.html
@@ -1,8 +1,8 @@
 <div style="background-color:white">
   <div class="row" style="overflow:auto;height:100%">
-    <div class="columnHome"></div>
+    <!-- <div class="columnHome"></div> -->
     <div class="columnHome">
-      <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px"
+      <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer"
           (click)="home()">
         &nbsp;Settings</p>
     <table style="width:100%;padding-left:25px;padding-right:25px;">
@@ -61,6 +61,6 @@
       </tr>
     </table>
   </div>
-    <div class="columnHome"></div>
+    <!-- <div class="columnHome"></div> -->
   </div>
 </div>
