--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -1,6 +1,6 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
                 <div id="mySidenav" class="sidenav" *ngIf="openNavBar">
                         <span style="margin-top:10px;"><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18"
@@ -21,7 +21,7 @@
                         <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
                                 align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
                     </div>
-            <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px">
+            <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 4px;">
                 &nbsp;
                 Transactions</p>
             
@@ -163,6 +163,6 @@
                 </div>
             </div>
         </div>
-        <div class="columnHome"></div>
+        <!-- <div class="columnHome"></div> -->
     </div>
 </div>
