--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -27,7 +27,7 @@
             
             <p style="float: right;">
                 <button id="7day" class="day7" (click)="click7days()">7 Days&nbsp;</button>&nbsp;
-                <button id="30day" class="day30" (click)="click30days()">&nbsp;30 Days</button>
+                <button id="30day" class="day30" (click)="click30days()">&nbsp;&nbsp;30 Days</button>
             </p>
             <br>
             <p class="otherSet" style="margin-top: 35px;background: gainsboro;">17th Dec 2019</p>
