--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -1,3 +1,32 @@
+<style>
+    .columnContainer {
+      display: flex;
+      flex-direction: row;
+      flex-flow: wrap;
+    }
+    .lab{
+        bottom: -45px;
+    position: relative;
+    font-size: 16px;
+    font-family: raleway_regular, Arial;
+    color: #000000;
+    }
+    .imageContainer {
+      flex-basis: 33%;
+      text-align: center;
+      width: 99px;
+      height: 99px;
+      margin-bottom: 60px;
+    }
+    .eh4{
+        top: 5px;
+        position: relative;
+        font-size: 20px;
+        font-family: raleway_regular,arial;
+        font-weight: 700;
+        color: white;
+    }
+    </style>
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
         <!-- <div class="columnHome"></div> -->
@@ -33,63 +62,65 @@
             </p>
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
-            <div class="wrapper" id="column" *ngIf="gridView" style="opacity:1">
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Polygon 12.png" style="cursor:pointer" (click)="sendMoney()" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
+ 
+            <div class="columnContainer" *ngIf="gridView" style="opacity:1">
+               
+                <div class="imageContainer" style="background: url('assets/Polygon 12.png') center no-repeat;" > 
+                    <h4 class="eh4" style="cursor:pointer" (click)="sendMoney()">$</h4>
+                    <label class="lab" style="cursor:pointer" (click)="sendMoney()">
+                    New Transfer
+                    </label>
                 </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 1.png" style="cursor:pointer" (click)="sendMoney()" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
+                <div class="imageContainer"  style="background: url('assets/Group 1.png') center no-repeat;">
+                    <h4 class="eh4" style="cursor:pointer" (click)="sendMoney()">ET</h4>
+                    <label class="lab" style="cursor:pointer" (click)="sendMoney()"> 
+                    Eric Thomson
+                    </label>
                 </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 3.png" style="cursor:pointer" (click)="sendMoney()" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
+                
+                <div class="imageContainer" style="background: url('assets/Group 3.png') center no-repeat;">
+                    <h4 class="eh4">W</h4>
+                    <label class="lab">
+                       Williams
+                        </label>
                 </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 4.png" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText">New Transfer</span>
-                </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 5.png" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText">New Transfer</span>
-                </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 6.png" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText">New Transfer</span>
-                </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 7.png" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText">New Transfer</span>
-                </div>
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 8.png" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText">New Transfer</span>
-                </div>
-
-                <div style="margin: auto;text-align: right;">
-                    <img class="test" src="assets/Group 9.png" />
-                    <label class="lal">One</label>
-                    <br><br>
-                    <span class="centerText">New Transfer</span>
-                </div>
-            </div>
+                <div class="imageContainer" style="background: url('assets/Group 4.png') center no-repeat;">
+                    <h4 class="eh4">E</h4>
+                    <label class="lab">
+                        Esther
+                        </label>
+                  </div>
+                  <div class="imageContainer" style="background: url('assets/Group 5.png') center no-repeat;">
+                      <h4 class="eh4">SS</h4>
+                      <label class="lab">
+                       Steve Smith
+                        </label>
+                  </div>
+                  <div class="imageContainer" style="background: url('assets/Group 6.png') center no-repeat;">
+                      <h4 class="eh4">H</h4>
+                      <label class="lab">
+                        Harper
+                        </label>
+                  </div>
+                  <div class="imageContainer" style="background: url('assets/Group 7.png') center no-repeat;">
+                      <h4 class="eh4">E</h4>
+                      <label class="lab">
+                        Elizabeth
+                        </label>
+                  </div>
+                  <div class="imageContainer" style="background: url('assets/Group 8.png') center no-repeat;">
+                      <h4 class="eh4">M</h4>
+                      <label class="lab">
+                        Michael
+                        </label>
+                  </div>
+                  <div class="imageContainer" style="background: url('assets/Group 9.png') center no-repeat;">
+                      <h4 class="eh4">D</h4>
+                      <label class="lab">
+                        Daniel
+                        </label>
+                  </div>
+              </div>
             <div class="ListWrapper" id="column" *ngIf="listView">
                 <div style="margin: auto;">
                     <img class="test" src="assets/Polygon 12.png" />
