--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -63,7 +63,7 @@
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
  
-            <div class="columnContainer" *ngIf="gridView" style="opacity:1">
+            <div class="columnContainer" id="column" *ngIf="gridView" style="opacity:1">
                
                 <div class="imageContainer" style="background: url('assets/Polygon 12.png') center no-repeat;" > 
                     <h4 class="eh4" style="cursor:pointer" (click)="sendMoney()">$</h4>
