--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -19,7 +19,7 @@
       margin-bottom: 60px;
     }
     .eh4{
-        top: 5px;
+        top: 7.5px;
         position: relative;
         font-size: 20px;
         font-family: raleway_regular,arial;
@@ -120,6 +120,24 @@
                         Daniel
                         </label>
                   </div>
+                  <div class="imageContainer" style="background: url('assets/Group 7.png') center no-repeat;">
+                    <h4 class="eh4">E</h4>
+                    <label class="lab">
+                      Elizabeth
+                      </label>
+                </div>
+                <div class="imageContainer" style="background: url('assets/Group 8.png') center no-repeat;">
+                    <h4 class="eh4">M</h4>
+                    <label class="lab">
+                      Michael
+                      </label>
+                </div>
+                <div class="imageContainer" style="background: url('assets/Group 9.png') center no-repeat;">
+                    <h4 class="eh4">D</h4>
+                    <label class="lab">
+                      Daniel
+                      </label>
+                </div>
               </div>
             <div class="ListWrapper" id="column" *ngIf="listView">
                 <div style="margin: auto;">
