--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -1,32 +1,3 @@
-<style>
-    .columnContainer {
-      display: flex;
-      flex-direction: row;
-      flex-flow: wrap;
-    }
-    .lab{
-        bottom: -45px;
-    position: relative;
-    font-size: 16px;
-    font-family: raleway_regular, Arial;
-    color: #000000;
-    }
-    .imageContainer {
-      flex-basis: 33%;
-      text-align: center;
-      width: 99px;
-      height: 99px;
-      margin-bottom: 60px;
-    }
-    .eh4{
-        top: 7.5px;
-        position: relative;
-        font-size: 20px;
-        font-family: raleway_regular,arial;
-        font-weight: 700;
-        color: white;
-    }
-    </style>
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
         <!-- <div class="columnHome"></div> -->
@@ -60,7 +31,6 @@
             <p style="float: right;cursor: pointer;">
                 <span><img src="assets/yellow-grid.png" id="grid" alt="" align="top" (click)="gridViewFunc()"> &nbsp;</span>
             </p>
-            <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
  
             <div class="columnContainer" id="column" *ngIf="gridView" style="opacity:1">
@@ -120,47 +90,46 @@
                         Daniel
                         </label>
                   </div>
-                  <div class="imageContainer" style="background: url('assets/Group 7.png') center no-repeat;">
-                    <h4 class="eh4">E</h4>
-                    <label class="lab">
-                      Elizabeth
-                      </label>
-                </div>
-                <div class="imageContainer" style="background: url('assets/Group 8.png') center no-repeat;">
-                    <h4 class="eh4">M</h4>
-                    <label class="lab">
-                      Michael
-                      </label>
-                </div>
-                <div class="imageContainer" style="background: url('assets/Group 9.png') center no-repeat;">
-                    <h4 class="eh4">D</h4>
-                    <label class="lab">
-                      Daniel
-                      </label>
-                </div>
               </div>
-            <div class="ListWrapper" id="column" *ngIf="listView">
-                <div style="margin: auto;">
-                    <img class="test" src="assets/Polygon 12.png" />
-                    <label class="lalFirst">One</label>
-                    <br>
-                    <br>
-                    <span class="lal2">New Transfer</span>
+            <div class="columnContainer" id="column" *ngIf="listView" style="float: left;">
+                <div class="imageContainerList" style="background: url('assets/Polygon 12.png')  no-repeat;" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">$</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
+                    New Transfer
+                    </label>
                 </div>
-                <div style="margin: auto;">
-                    <img class="test" src="assets/Polygon 12.png" />
-                    <label class="lalFirst">One</label>
-                    <br>
-                    <br>
-                    <span class="lal2">New Transfer</span>
+                <div class="imageContainerList" style="background: url('assets/Group 1.png')  no-repeat;" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">ET</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
+                    Eric Thomson
+                    </label>
                 </div>
-                <div style="margin: auto;">
-                    <img class="test" src="assets/Polygon 12.png" />
-                    <label class="lalFirst">One</label>
-                    <br>
-                    <br>
-                    <span class="lal2">New Transfer</span>
+                <div class="imageContainerList" style="background: url('assets/Group 3.png')  no-repeat;" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">W</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
+                    Williams
+                    </label>
                 </div>
+                <div class="imageContainerList" style="background: url('assets/Group 4.png')  no-repeat;" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">E</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
+                    Esther
+                    </label>
+                </div>
+                <div class="imageContainerList" style="background: url('assets/Group 5.png')  no-repeat;" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">SS</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
+                    Steve Smith
+                    </label>
+                </div>
+                <div class="imageContainerList" style="background: url('assets/Group 6.png')  no-repeat;" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">H</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
+                    Harper
+                    </label>
+                </div>
+                
+               
             </div>
         </div>
         <!-- <div class="columnHome"></div> -->
